--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Django #
 *.log
 *.pot
@@ -90,6 +89,13 @@ venv.bak/
 
 # mypy 
 .mypy_cache/ 
+
+# Sublime Text # 
+*.tmlanguage.cache 
+*.tmPreferences.cache 
+*.stTheme.cache 
+*.sublime-workspace 
+*.sublime-project 
 
 # sftp configuration file 
 sftp-config.json 
